# pmULE

./: .gitignore  Dockerfile  Ej_Molibdeno.ipynb  Ejercicio 5.ipynb  Ejercicio 6.ipynb  Ejercicio Molibdeno.ipynb  Ejercicio_02.ipynb  Ejercicio_03.ipynb  Ejercicio_04.ipynb  Ejercicio_05.ipynb  Ejercicio_06.ipynb  Ejercicio_07.ipynb  Ejercicio_09.ipynb  Ejercicio_10.ipynb  Ejercicio_11.ipynb  Ejercicio_12.ipynb  Ejercicio_13.ipynb  Ejercicio_14.ipynb  Ejercicio_20.ipynb  Ejercicio_21.ipynb  Ejercicio_22.ipynb  Ejercicio_23.ipynb  Ejercicio_24.ipynb  Montecarlo_Proyectos.ipynb  Montecarlo_Proyectos_ecuaciones_nodales.ipynb  Montecarlo_Proyectos_matriz_de_caminos.ipynb  PERTs en Python.ipynb  README.md  Simplex_Duración_Camino_Critico.ipynb  Simplex_project_Crashing.ipynb  _quarto.yml  leccion_spectral.ipynb  makefile  pmule.py  pyproject.toml  render_ejercicio.sh  requirements.txt
binder/: apt.txt  requirements.txt
csv_files/: datos_enunciado_molibdeno.csv
docs/: Ejercicio_01.html  Ejercicio_02.html  Ejercicio_03.html  Ejercicio_04.html  Ejercicio_05.html  Ejercicio_06.html  Ejercicio_07.html  Ejercicio_09.html  Ejercicio_10.html  Ejercicio_11.html  Ejercicio_12.html  Ejercicio_13.html  Ejercicio_14.html  Ejercicio_15.html  Ejercicio_16.html  Ejercicio_17.html  Ejercicio_20.html  Ejercicio_21.html  Ejercicio_22.html  Ejercicio_23.html  Ejercicio_24.html  Ejercicio_25.html  index.md
examples/: Ej_Molibdeno.html
notebooks/: Ej_Molibdeno.ipynb  Ejercicio_01.ipynb  Ejercicio_02.ipynb  Ejercicio_03.ipynb  Ejercicio_04.ipynb  Ejercicio_05.ipynb  Ejercicio_06.ipynb  (+26 more)
(+3 files in other folders)
