[project]
name = "pmule"
version = "0.1.0"
description = "A python library to represent Gantt, Pert, and Roy diagrams"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "amplpy>=0.16.0",
    "jupyter-ai-jupyternaut>=0.0.6",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "numpyarray-to-latex>=0.1.0",
    "pandas[excel]>=2.3.3",
    "pygraphviz>=1.14",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
[dependency-groups]
dev = [
    "ipykernel>=6.0",
    "jupyterlab>=4.2",
    "jupyter-tikz>=0.5.6",
    "pyright>=1.1.407",
]
lsp = [
    "jupyterlab-lsp>=5.0",
    "python-lsp-server[all]",  # Incluye pylsp-mypy, etc.
    "pyright",                 # Doble LSP (redundante pero robusto)
]

